details page 100% added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap');
+
+    * {
+      font-family: 'Plus Jakarta Sans', sans-serif;
+    }
+
     .home {
       background: rgb(227, 225, 248);
       background: linear-gradient(180deg, rgba(227, 225, 248, 1) 0%, rgba(255, 255, 255, 1) 100%);
