searcg filter added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap');
 
+    #range-slider-yellow .range-slider__range {
+      background-color: #7065F0;
+    }
+    #range-slider-yellow .range-slider__thumb {
+  background: #534ab3;
+  transition: transform 0.3s;
+}
+
     * {
       font-family: 'Plus Jakarta Sans', sans-serif;
     }
