--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
     #range-slider-yellow .range-slider__range {
       background-color: #7065F0;
     }
+
     #range-slider-yellow .range-slider__thumb {
-  background: #534ab3;
-  transition: transform 0.3s;
-}
+      background: #534ab3;
+      transition: transform 0.3s;
+    }
 
     * {
       font-family: 'Plus Jakarta Sans', sans-serif;
+    }
+
+    .underShadow {
+      box-shadow: 3px 0px 17px -7px rgba(0, 0, 0, 0.7) inset;
+      -webkit-box-shadow: 3px 0px 17px -7px rgba(0, 0, 0, 0.7) inset;
+      -moz-box-shadow: 3px 0px 17px -7px rgba(0, 0, 0, 0.7) inset;
     }
 
     .home {
