--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
       background: rgb(227, 225, 248);
       background: linear-gradient(180deg, rgba(227, 225, 248, 1) 0%, rgba(255, 255, 255, 1) 100%);
     }
+
+    .PhoneInputInput {
+      background-color: white;
+
+    }
+
+    .PhoneInputInput:focus {
+      outline: none;
+
+    }
   </style>
 </head>
 
