--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LRG26M8D2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'G-6LRG26M8D2');
+  </script>
 </head>
 
 <body>
